# kprs-web-api

./: .env.example  .gitignore  Cargo.toml
src/: db.rs  features.md  lib.rs  main.rs  rdb.rs  util.rs
src/data/: admin.rs  candidate.rs  live_clients.rs  mod.rs  user.rs  vote.rs  voter.rs
src/routes/: mod.rs
src/routes/admin/: check.rs  login.rs  mod.rs  reset.rs  simple_votes.rs  token.rs  votes.rs
src/routes/candidate/: candidate.rs  mod.rs
src/routes/user/: get.rs  mod.rs  reset.rs  vote.rs
src/routes/voter/: check.rs  logout.rs  mod.rs  vote.rs
src/routes/ws/: live_votes.rs  mod.rs
