[package]
name = "kprs-web-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
deadpool-redis = "0.22.0"
once_cell = "1.21.3"
redis = "0.32.7"
serde = "1.0.228"
time = { version = "0.3.44", features = ["macros", "formatting"]}
tokio = { version = "1", features = ["full"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
rand = "0.9.2"
surrealdb = { version = "2.4.0", features = ["kv-mem", "protocol-ws"] }
actix-cors = "0.7.1"
futures = "0.3.31"
actix-ws = "0.3.0"
futures-util = "0.3.31"
